<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_vertical"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_input_password"
            android:textAllCaps="false"
            android:textColor="@color/news_header_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/editText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入密码"
            android:password="true"
            android:textColor="@color/white"
            android:textSize="22sp" />
 <TextView
     android:id="@+id/wrong"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:text="@string/fbi_warning"
     android:layout_marginTop="20dp"
          android:textSize="25sp"
     android:textColor="@color/red"
     android:textAllCaps="true"
     android:visibility="gone"
     />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ensure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:text="@string/Enter"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="#00ffffff"
                android:text="@string/Exit"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>