<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/top_linear"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/bottom_bk2"
    >
   <com.rye.catcher.project.ctmviews.DistortionViews
       android:id="@+id/portrait"
       custom:Dtype="circle"
       custom:Dsrc="@mipmap/my4"
       android:scaleType="center"
       android:layout_width="70dp"
       android:layout_height="70dp"
       android:layout_gravity="bottom"
       android:layout_marginLeft="20dp"
       android:layout_marginBottom="@dimen/len_28"
       />
    <TextView
        android:id="@+id/codeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:textColor="@color/black_deep"
        android:text="@string/codeName"
        />
    <LinearLayout
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    </LinearLayout>
</LinearLayout>
<ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/top_linear"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:id="@+id/center_linear"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            >
            <LinearLayout
                android:id="@+id/left_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/left_laugh"
                    android:layout_gravity="center"
                    android:clickable="false"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:text="@string/left_first"
                    android:background="@color/transparent"
                    android:clickable="false"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/left_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/left_giggle"
                    android:layout_gravity="center"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:text="@string/left_second"
                    android:clickable="false"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/left_proud"
                    android:layout_gravity="center"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:text="@string/left_third"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/left_surprise"
                    android:layout_gravity="center"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:text="@string/left_fourth"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/fivth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/left_down"
                    android:layout_gravity="center"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:text="@string/left_fivth"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>